answer for question 6 (that is major changes in css3) is added on the blog page.

--- a/blog.html
+++ b/blog.html
@@ -112,6 +112,50 @@
             </section>
         </div>
 
+
+        <div id = "content" class = "answer">
+            <section >
+                <p id = "head">Major specific changes in css3</p>
+                <article id = "articles">
+                    <p>Let us see some specific changes in CSS3.</p>
+                    <p>Text Shadow: Text shadow property allows to add drop shadows to the text on a webpage.
+                        This is done by image or duplicating text element and then positioning it properly.</p>
+                    <p>Box Shadow: It allows to create a drop shadow for an element. Most of the time this effect is done by using repeated
+                        image around the element, but because of box shadow that is done with a single line of code.</p>
+                    <p>
+                        Border Image: It is the ability to swap out a border with an image. It allows to specify an
+                        image to display instead of a plain solid colored border.
+                    </p>
+                    <p>Rounded Corners: Before css3 a lot of code was required to create a rounded corner. Give attention on height,
+                        width and positioning is very boring. CSS3 introduces border radius property which gives the same rounded
+                    corner effect.
+                    </p>
+                    <p>Selectors: CSS3 introduce some new selectors. By using these selectors it is possible to choose DOM
+                        elements based on their attributes, so it might not necessary to specify classes and IDs for every
+                        element. Instead of that utilizing the attribute field to style them.</p>
+                    <p>Web Fonts: CSS3 introduces embedding any custom font on a webpage. Web pages
+                        render only fonts that are supported by the browser or client machine.</p>
+                    <p>Multicolumn Layout: Most of webpages are made by columns or boxes and these boxes are adjusted by designers.
+                        Multicolumn layout simplify this problem and allow to specify only the number of columns and then they
+                        will be formed.
+                    </p>
+                    <p>
+                        Transform: It enables to rotate web elements on a webpage. Before CSS3 JavaScript was required 
+                        to rotate an element and they consume more resources, so CSS3 simplify this by introduce transform
+                        attribute.
+                    </p>
+                    <p>
+                        RGBA: RGB is used to set colors for different elements, but now CSS3 introduces a modification and added
+                        opacity manipulation to this property. RGBA stands for Red Green Blue Alpha Channels.
+                    </p>
+                    
+
+
+                </article>
+                <p id = "date">March 20, 2020</p>
+            </section>
+        </div>
+
     </header>
 </body>
 </html>
