I have added footer on each page.

--- a/Gallery.html
+++ b/Gallery.html
@@ -34,22 +34,31 @@
     </div>
     <h3 id = "H3">Temesgen/Gallery</h3>
     <section class = "mar">
-    <div id = "pic">
+
+    <!-- <div id = "pic"> -->
         <img src="https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="pic1" >
         <img src="https://images.pexels.com/photos/616404/pexels-photo-616404.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="pic2" >
         <img src="https://images.pexels.com/photos/1099680/pexels-photo-1099680.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="pic3">
-    </div>
-    <div id = "pic2">
+    <!-- </div> -->
+    <!-- <div id = "pic2"> -->
         <img src="https://images.unsplash.com/photo-1583332402448-c398a068acc2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="pic4">
         <img src="https://images.unsplash.com/photo-1555267649-40130016656c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="pic5">
         <img src="https://images.unsplash.com/photo-1475122417771-e45fcf790372?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="pic6">
-    </div>
-    <div id = "pic3">
+    <!-- </div> -->
+    <!-- <div id = "pic3"> -->
         <img src="https://images.pexels.com/photos/302899/pexels-photo-302899.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="pic7" >
         <img src="https://images.pexels.com/photos/34085/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="pic8">
         <img src="https://images.pexels.com/photos/585750/pexels-photo-585750.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
-    </div>
+    <!-- </div> -->
 
 </section> 
+<div class = "clear"></div>
+
+<footer>
+    <p>Copyright © 2020 <a href="index.html">Temesgen Geta</a>. All rights reserved.</p>
+    <a href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank">Facebook</a>
+    <a href="https://www.telegram.com/@temesgengeta" target="_blank">Telegram</a>
+</footer>
 </body>
+
 </html>
