--- a/MyWorks.html
+++ b/MyWorks.html
@@ -39,5 +39,12 @@
           </ul>
       </div>
   </nav>
+
+  <footer>
+    <p>Copyright © 2020 <a href="index.html">Temesgen Geta</a>. All rights reserved.</p>
+    <a href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank">Facebook</a>
+    <a href="https://www.telegram.com/@temesgengeta" target="_blank">Telegram</a>
+
+</footer>
 </body>
 </html>
