--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         </div>
         <div class = "fixation"></div>
     </div>
-
     <div id = "horizontal">
         <img id = "png" src="images/teme.JPG" alt="Temesgen profile image">
         <h1>Temesgen Geta </h1>
@@ -34,7 +33,7 @@
             </p>
     </div>
 
-<div class = "flex-container" id = "horizontal">
+<div class = "flex-container" id = "line">
 
 <div class = "flex-item">
     <h3 id = "bold">Hobbies and Interest</h3>
@@ -113,7 +112,7 @@
 
 </div> 
 
-<div class = "flex-container">
+<div class = "flex-container" id = "back">
 <div id = "bg" class = "flex-item">
     <div id = "opacity">
         <h3>Personal Information</h3>
@@ -133,7 +132,11 @@
     </div>
 </div>
 
-
+<div id = "og" class = "flex-item">
+    <div id = "opacity">
+        <p>I am software engineering student!</p>
+    </div>
+</div>
 
 
 <div id = "bg" class = "flex-item">
@@ -162,15 +165,14 @@
     </div>
 </div>
 
+
 </div>
-<div id = "og" class = "flex-item">
-    <div id = "opacity">
-        <p>I am software engineering student!</p>
-    </div>
-</div>
+<footer>
+    <p>Copyright © 2020 <a href="index.html">Temesgen Geta</a>. All rights reserved.</p>
+    <a href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank">Facebook</a>
+    <a href="https://www.telegram.com/@temesgengeta" target="_blank">Telegram</a>
 
-
-
+</footer>
 
 </body>
 
