--- a/question2.html
+++ b/question2.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic_Tac_Toe</title>
     <link rel="stylesheet" href="css/question2.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class = "navigation">
+        <a href="index.html" class = "type">MyCv</a>
+        <div class = "menu">
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="contact.html">Contact</a></li>
+                <li> <a href="gallery.html">Gallery</a></li>
+                <li> <a href="MyWorks.html">MyWorks</a></li>
+                <li> <a href="blog.html">Blog</a></li>
+            </ul>
+        </div>
+        <div class = "fixation"></div>
+    </div>
     <div class = "container">
         <div id = "box" class = "a"></div>
         <div id = "box" class = "b"></div>
@@ -19,5 +33,11 @@
         <div id = "box" class = "h"></div>
     </div>
     
+    <footer>
+        <p>Copyright © 2020 <a href="index.html">Temesgen Geta</a>. All rights reserved.</p>
+        <a href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank">Facebook</a>
+        <a href="https://www.telegram.com/@temesgengeta" target="_blank">Telegram</a>
+    
+    </footer>
 </body>
 </html>
