--- a/question3.html
+++ b/question3.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flags</title>
     <link rel="stylesheet" href="css/question3.css">
+    <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
+    <div class = "navigation">
+        <a href="index.html" class = "type">MyCv</a>
+        <div class = "menu">
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="contact.html">Contact</a></li>
+                <li> <a href="gallery.html">Gallery</a></li>
+                <li> <a href="MyWorks.html">MyWorks</a></li>
+                <li> <a href="blog.html">Blog</a></li>
+            </ul>
+        </div>
+        <div class = "fixation"></div>
+    </div>
+    <div class = "fixation"></div>
     <div class = "container">
         <div class = "part">
             <div id = "a"></div>
@@ -68,17 +84,7 @@
             <div id="d"></div>
             <div id="e"></div>
             <div id="a"></div>
-            <div id = "circle"></div>
-            <div id = "array1">|</div>
-            <div id = "array2">|</div>
-            <div id = "array3">|</div>
-            <div id = "array4">|</div>
-            <div id = "array5">|</div>
-            <div id = "star">&#9956;</div>
         </div>
-
-
-
         <div class = "part">
             <div id="a"></div>
             <div id="g"></div>
@@ -90,6 +96,13 @@
         </div>
 
     </div>
+
+    <footer>
+        <p>Copyright © 2020 <a href="index.html">Temesgen Geta</a>. All rights reserved.</p>
+        <a href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank">Facebook</a>
+        <a href="https://www.telegram.com/@temesgengeta" target="_blank">Telegram</a>
+    
+    </footer>
 
 </body>
 </html>
