--- a/blog.html
+++ b/blog.html
@@ -157,5 +157,12 @@
         </div>
 
     </header>
+
+    <footer>
+        <p>Copyright © 2020 <a href="index.html">Temesgen Geta</a>. All rights reserved.</p>
+        <a href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank">Facebook</a>
+        <a href="https://www.telegram.com/@temesgengeta" target="_blank">Telegram</a>
+    
+    </footer>
 </body>
 </html>
