New: I have changed the background image/color of question 4, 5, and 6 answer border.

--- a/MyWorks.html
+++ b/MyWorks.html
@@ -33,9 +33,9 @@
   <nav>
       <div>
           <ul id = "u">
-              <li id = "l"><a id = "j" href="question1.html" target = "_blank">Selector</a></li>
-              <li id = "l"><a id = "j" href="question2.html" target = "_blank">TicTac</a></li>
-              <li id = "l"><a id = "j" href="question3.html" target = "_blank">Flags</a></li>
+              <li id = "l"><a id = "j" href="question1.html" target = "_blank">Question1</a></li>
+              <li id = "l"><a id = "j" href="question2.html" target = "_blank">Question2</a></li>
+              <li id = "l"><a id = "j" href="question3.html" target = "_blank">Question3</a></li>
           </ul>
       </div>
   </nav>
