This is the last version of my cv website.

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
            <br>
             what you want to say?
                 <br>
-            <textarea name="" id="" cols="30" rows="10"></textarea> <br>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Say something ..."></textarea> <br>
            <input id = "onlySubmit" type="submit" value = "submit">
      </form>
 </div>
@@ -94,13 +94,13 @@
  </div>  
  <div id = "spacing" >
 
-    <a id = "fb" class = "contacts" href="https://twitter.com/" target = "_blank"><img id ="media" src="images/twitter.jfif" alt="" ></a>
+    <a class = "contacts" href="https://twitter.com/" target = "_blank"><img id ="media" src="images/twitter.jfif" alt="" ></a>
 
-    <a id = "fb" class = "contacts" href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank"><img id ="media" src="images/facebook.jfif" alt=""></a>
+    <a class = "contacts" href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank"><img id ="media" src="images/facebook.jfif" alt=""></a>
 
-    <a id = "fb" class = "contacts" href="https://www.yahoo.com/" target = "_blank"><img id ="media" src="images/yahoo.png" alt=""></a>
+    <a  class = "contacts" href="https://www.yahoo.com/" target = "_blank"><img id ="media" src="images/yahoo.png" alt=""></a>
 
-    <a id = "fb" class = "contacts" href="https://www.instagram.com/" target = "_blank"><img id ="media" src="images/instagram.jfif" alt=""></a>
+    <a  class = "contacts" href="https://www.instagram.com/" target = "_blank"><img id ="media" src="images/instagram.jfif" alt=""></a>
 </div> 
 
 </div>
