--- a/MyWorks.html
+++ b/MyWorks.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temesgen Geta</title>
+    <title>Temesgen CV</title>
+    <link rel="icon" href="images/icon.jfif">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
