--- a/question2.html
+++ b/question2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic_Tac_Toe</title>
+    <link rel="icon" href="images/icon.jfif">
     <link rel="stylesheet" href="css/question2.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
